[package]
name = "drk-in"
version = "1.0.0"
authors = ["DarkCh4osss <67869598+DarkCh4osss@users.noreply.github.com>"]
edition = "2018"
homepage = "https://fabiogrimaldi-dev.it/"
documentation = "https://fabiogrimaldi-dev.it/"
repository = "https://fabiogrimaldi-dev.it/"
readme = "README.md"
description = "Python Input Like"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
