[package]
name = "drk-in"
version = "1.0.4"
authors = ["DarkCh4osss <67869598+DarkCh4osss@users.noreply.github.com>"]
edition = "2018"
homepage = "https://github.com/DarkCh4osss/drk-in"
documentation = "https://docs.rs/drk-in/"
repository = "https://github.com/DarkCh4osss/drk-in"
readme = "README.md"
description = "A utility crate"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
